<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match">
    <LinearLayout
        android:id="@+id/soccer"
        android:orientation="vertical"
        style="@style/match">
        <LinearLayout
            style="@style/layout">
            <LinearLayout
                style="@style/teams">
                <EditText
                    style="@style/heads"
                    android:id="@+id/editA"
                    android:hint="@string/teamA"
                    android:textSize="30sp"/>
                <TextView
                    style="@style/heads"
                    android:id="@+id/teama"
                    android:text="@string/cero"
                    android:textSize="80sp" />
                <Button
                    style="@style/bas"
                    android:text="@string/free"
                    android:textSize="20sp"
                    android:onClick="pointToScoreA" />
                <Button
                    style="@style/bas"
                    android:id="@+id/pts_2a"
                    android:text="@string/basket2"
                    android:onClick="pointToScoreA" />
                <Button
                    style="@style/bas"
                    android:id="@+id/pts_3a"
                    android:text="@string/triple"
                    android:onClick="pointToScoreA" />
            </LinearLayout>
            <LinearLayout
                style="@style/mBar" />
            <LinearLayout
                style="@style/teams">
                <EditText
                    style="@style/heads"
                    android:id="@+id/editB"
                    android:hint="@string/teamb"
                    android:textSize="30sp"/>

                <TextView
                    style="@style/heads"
                    android:id="@+id/teamb"
                    android:text="@string/cero"
                    android:textSize="80sp" />

                <Button
                    style="@style/bas"
                    android:text="@string/free"
                    android:textSize="20sp"
                    android:onClick="pointToScoreB" />
                <Button
                    style="@style/bas"
                    android:id="@+id/pts_2b"
                    android:text="@string/basket2"
                    android:onClick="pointToScoreB" />
                <Button
                    style="@style/bas"
                    android:id="@+id/pts_3b"
                    android:text="@string/triple"
                    android:onClick="pointToScoreB" />
            </LinearLayout>
        </LinearLayout>
        <Button
            style="@style/button"
            android:id="@+id/reset"
            android:text="@string/reset"
            android:layout_marginTop="5dp"
            android:onClick="reset"/>
    </LinearLayout>
</ScrollView>