<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match">
    <LinearLayout
        android:id="@+id/soccer"
        android:orientation="vertical"
        style="@style/match">
        <LinearLayout
            style="@style/layout">
            <LinearLayout
                style="@style/teams">
                <EditText
                    style="@style/heads"
                    android:id="@+id/editA"
                    android:hint="@string/teamA"
                    android:textSize="30sp"/>
                <TextView
                    style="@style/heads"
                    android:id="@+id/teama"
                    android:text="@string/cero"
                    android:textSize="80sp" />

                <Button
                    style="@style/heads"
                    android:text="@string/goal"
                    android:textSize="25sp"
                    android:onClick="pointToScoreA" />
            </LinearLayout>
            <LinearLayout
                style="@style/mBar" />
            <LinearLayout
                style="@style/teams">
                <EditText
                    style="@style/heads"
                    android:id="@+id/editB"
                    android:hint="@string/teamb"/>

                <TextView
                    style="@style/heads"
                    android:id="@+id/teamb"
                    android:text="@string/cero"
                    android:textSize="80sp" />

                <Button
                    style="@style/heads"
                    android:onClick="pointToScoreB"
                    android:text="@string/goal"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            style="@style/button"
            android:id="@+id/reset"
            android:text="@string/reset"
            android:onClick="reset"/>
    </LinearLayout>
</ScrollView>