<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match">
    <LinearLayout
        android:id="@+id/tennis"
        android:orientation="vertical"
        style="@style/match">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                style="@style/setheads"
                android:id="@+id/editA"
                android:textSize="30sp"
                android:hint="@string/teamA" />
            <Button
                style="@style/tbutton"
                android:id="@+id/reset_tset"
                android:text="@string/reset"
                android:onClick="reset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:id="@+id/setA1"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA2"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA3"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA4"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA5"
                android:text="@string/tset"/>
        </LinearLayout>
        <EditText
            style="@style/setheads"
            android:id="@+id/editB"
            android:hint="@string/teamb"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:id="@+id/setB1"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB2"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB3"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB4"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB5"
                android:text="@string/tset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="5dp"
            android:background="#B7B4B8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                style="@style/teams"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleA"
                    style="@style/setheads"
                    android:text="@string/teamA" />
                <TextView
                    style="@style/setheads"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/teama"
                    android:text="@string/cero"
                    android:textSize="80sp" />
                <Button
                    style="@style/setheads"
                    android:id="@+id/bttA"
                    android:text="@string/tpoint"
                    android:onClick="TenScoreA" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="5dp"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:background="#B7B4B8" />
            <LinearLayout
                style="@style/teams"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleB"
                    style="@style/setheads"
                    android:text="@string/teamb" />
                <TextView
                    style="@style/setheads"
                    android:id="@+id/teamb"
                    android:layout_marginBottom="5dp"
                    android:text="@string/cero"
                    android:textSize="80sp" />
                <Button
                    style="@style/setheads"
                    android:id="@+id/bttB"
                    android:onClick="TenScoreB"
                    android:text="@string/tpoint"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>