<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match">
    <LinearLayout
        android:id="@+id/volley"
        android:orientation="vertical"
        style="@style/match">
        <EditText
            style="@style/setheads"
            android:id="@+id/editA"
            android:hint="@string/teamA"
            android:textSize="40sp"
            android:layout_marginLeft="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:textSize="35sp"
                android:id="@+id/setA1"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA2"
                android:textSize="35sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA3"
                android:textSize="35sp"
                android:text="@string/tset"/>
        </LinearLayout>
        <EditText
            style="@style/setheads"
            android:id="@+id/editB"
            android:hint="@string/teamb"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="40sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:id="@+id/setB1"
                android:textSize="35sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB2"
                android:textSize="35sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB3"
                android:textSize="35sp"
                android:text="@string/tset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="5dp"
            android:background="#B7B4B8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                style="@style/teams"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleA"
                    style="@style/setheads"
                    android:text="@string/teamA" />
                <Button
                    style="@style/setheads"
                    android:id="@+id/bttA"
                    android:text="@string/vpoint"
                    android:onClick="BadScoreA" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="5dp"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:background="#B7B4B8" />
            <LinearLayout
                style="@style/teams"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleB"
                    style="@style/setheads"
                    android:text="@string/teamb" />
                <Button
                    style="@style/setheads"
                    android:id="@+id/bttB"
                    android:onClick="BadScoreB"
                    android:text="@string/vpoint" />
            </LinearLayout>
        </LinearLayout>
        <Button
            style="@style/tbutton"
            android:textSize="25sp"
            android:id="@+id/reset_bset"
            android:layout_marginTop="0dp"
            android:layout_marginRight="50dp"
            android:text="@string/reset"
            android:onClick="reset"/>
    </LinearLayout>
</ScrollView>