<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match">
    <LinearLayout
        android:id="@+id/baseball"
        android:orientation="vertical"
        style="@style/match">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                style="@style/setheads"
                android:id="@+id/editA"
                android:textSize="30sp"
                android:layout_marginLeft="15dp"
                android:hint="@string/teamA" />
            <Button
                style="@style/tbutton"
                android:id="@+id/reset_base"
                android:text="@string/reset"
                android:onClick="reset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:id="@+id/setA1"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA2"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA3"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA4"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA5"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA6"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA7"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA8"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setA9"
                android:textSize="20sp"
                android:text="@string/tset"/>
        </LinearLayout>
        <EditText
            style="@style/setheads"
            android:id="@+id/editB"
            android:hint="@string/teamb"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <TextView
                style="@style/set"
                android:id="@+id/setB1"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB2"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB3"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB4"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB5"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB6"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB7"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB8"
                android:textSize="20sp"
                android:text="@string/tset"/>
            <TextView
                style="@style/set"
                android:id="@+id/setB9"
                android:textSize="20sp"
                android:text="@string/tset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="5dp"
            android:background="#B7B4B8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Balls"
                android:textSize="10sp"
                android:id="@+id/balls"
                android:onClick="ballCounter"
                android:layout_marginLeft="5dp"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/txt_balls"
                android:textSize="20sp"
                android:padding="12dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Strikes"
                android:onClick="strikeCounter"
                android:textSize="10sp"
                android:id="@+id/strike"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:id="@+id/txt_strike"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="12dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Out"
                android:onClick="outCounter"
                android:textSize="10sp"
                android:id="@+id/out"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/txt_out"
                android:textSize="20sp"
                android:padding="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="5dp"
            android:background="#B7B4B8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/setheads"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/titleA"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/teamA"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/runA"
                android:onClick="runCounter"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:layout_marginRight="10dp"
                android:textSize="25sp"
                android:textAllCaps="true"
                android:text="Run"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="5dp"
            android:background="#B7B4B8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/setheads"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/titleB"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/teamb"/>
            <Button
                android:id="@+id/runB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="runCounter"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textAllCaps="true"
                android:text="Run"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>